update the code

--- a/Challenges_Html_Css/index.html
+++ b/Challenges_Html_Css/index.html
@@ -14,38 +14,44 @@
     <header>
       <div class="bar">
           <div class="logo">haaamed-30</div>
-          <ul>
-              <li class="home">home</li>
-              <li class="drop">pages</li>
-              <li class="drop">dropdowen</li>
-              <li>scerives</li>
-              <li>contact us</li>
-              <li>about us</li>
-          </ul>
+          <nav>
+            <ul>
+                <li class="home">home</li>
+                <li class="drop">pages
+                  <div class="page">
+                            <ul class="page-one">
+                              <li>Gallery</li>
+                              <li>Full Width</li>
+                              <li>Sidebar Left</li>
+                              <li>Sidebar Right</li>
+                              <li>Basic Grid</li>
+                              <li>Font Icons</li>
+                            </ul>
+                  </div>
+                </li>
+                <li class="drop">dropdowen
+                  <div class="dowen">
+                          <ul class="dowen-one">
+                            <li>Level 2</li>
+                            <li class="dowen-two">Level 2 + Drop
+                              <div class="last-dowen">
+                                <ul class="dowen-three">
+                                  <li>Level 3</li>
+                                  <li>Level 3</li>
+                                  <li>Level 3</li>
+                                </ul>
+                              </div>
+                            </li>
+                            <li>Level 2</li>
+                          </ul>
+                  </div>
+                </li>
+                <li>scerives</li>
+                <li>contact us</li>
+                <li>about us</li>
+            </ul>
+          </nav>
       </div>
-      <div class="page">
-                <ul class="page-one">
-                  <li>Gallery</li>
-                  <li>Full Width</li>
-                  <li>Sidebar Left</li>
-                  <li>Sidebar Right</li>
-                  <li>Basic Grid</li>
-                  <li>Font Icons</li>
-                </ul>
-        </div>
-        <div class="dowen">
-                <ul class="dowen-one">
-                  <li>Level 2</li>
-                  <li class="dowen-two">Level 2 + Drop
-                      <ul class="dowen-three">
-                        <li>Level 3</li>
-                        <li>Level 3</li>
-                        <li>Level 3</li>
-                      </ul>
-                  </li>
-                  <li>Level 2</li>
-                </ul>
-        </div>
         <div class="text">
             <h1>Suspendisse Potenti</h1>
             <p>
@@ -59,6 +65,5 @@
             </div>
         </div>
     </header>
-
   </body>
 </html>
