colp-Desktop proj

--- a/Challenges_Html_Css/index.html
+++ b/Challenges_Html_Css/index.html
@@ -20,7 +20,7 @@
                 <li class="drop">pages
                   <div class="page">
                             <ul class="page-one">
-                              <li>Gallery</li>
+                              <li id="sec-three">Gallery</li>
                               <li>Full Width</li>
                               <li>Sidebar Left</li>
                               <li>Sidebar Right</li>
@@ -242,5 +242,142 @@
           </div>
       </div>
     </section>
+    <section type="sec-three"  class="componens">
+      <div class="heading">
+        <p>Odio duis ut est quis nisl consequat</p>
+        <h3>Gravida Donec Non Erat Eget</h3>
+      </div>
+      <div class="poster">
+            <div class="poster-one">
+              <div class="piacher">
+                <img src="./images/02.jpeg" alt="no photo">
+              </div>
+              <div class="hansh">
+                <i class="fas fa-user"></i>
+                <span>Admin</span>
+                <span>06 Apr 2045</span>
+              </div>
+              <div class="paragraph">
+                <h4>Elit Pellentesque Dapibus</h4>
+                <p>
+                  Justo massa adipiscing a convallis ultricies luctus et dolor aliquam nulla aenean
+                  facilisis ullamcorper diam nunc pede nulla iaculis quis lacinia ac adipiscing.
+                </p>
+              </div>
+            </div>
+            <div class="poster-one">
+              <div class="piacher">
+                <img src="./images/03.jpeg" alt="no photo">
+              </div>
+              <div class="hansh">
+                <i class="fas fa-user"></i>
+                <span>Admin</span>
+                <span>05 Apr 2045</span>
+              </div>
+              <div class="paragraph">
+                <h4>Quis Ligula Morbi Quam</h4>
+                <p>
+                  Semper mattis nulla cursus lorem ut gravida tempor massa massa porta
+                  libero at scelerisque et arcu nulla facilisi aenean fringilla imperdiet
+                  felis mauris.
+                </p>
+              </div>
+            </div>
+            <div class="poster-one">
+              <div class="piacher">
+                <img src="./images/04.jpeg" alt="no photo">
+              </div>
+              <div class="hansh">
+                <i class="fas fa-user"></i>
+                <span>Admin</span>
+                <span>04 Apr 2045</span>
+              </div>
+              <div class="paragraph">
+                <h4>Hendrerit Ligula Eu Diam</h4>
+                <p>
+                  Ac lectus sed ultricies augue congue nibh donec convallis elementum
+                   leo nullam dignissim varius ante fusce pharetra sodales arcu sed
+                   rutrum ipsum a ipsum.
+                </p>
+              </div>
+            </div>
+      </div>
+    </section>
+    <div class="last">
+      <article class="last-section">
+        <div class="fide-one">
+          <h5>Praesent Id Aliquam</h5>
+          <p>
+            Non tellus nec sapien lobortis lobortis mauris egestas massa ac cursus pellentesque
+             leo risus convallis nulla et fringilla sapien magna sit
+             amet magna aliquam tempus praesent sit amet neque sed lobortis nulla facilisi […]
+          </p>
+          <div class="social">
+              <div class="facebook">
+                <i class="fab fa-facebook-square"></i>
+              </div>
+              <div class="google">
+                <i class="fab fa-google-plus-g"></i>
+              </div>
+              <div class="linkedin">
+                <i class="fab fa-linkedin"></i>
+              </div>
+              <div class="twiter">
+                <i class="fab fa-twitter"></i>
+              </div>
+              <div class="vacko">
+                <i class="fab fa-vk"></i>
+              </div>
+          </div>
+        </div>
+        <div class="fide-two">
+          <h5>Rutrum Amet Sodales</h5>
+          <p>Nulla tincidunt magna</p>
+          <p>Vel iaculis mollis mi</p>
+          <p>Lacus tincidunt diam ac</p>
+          <p>Varius purus justo pretium</p>
+          <p>Nunc proin tortor elit</p>
+        </div>
+        <div class="fide-three">
+          <h5>At Feugiat In Diam</h5>
+          <p>
+            In vestibulum dolor et
+             augue fusce neque enim scelerisque at fermentum.
+          </p>
+          <input class="in-t" type="text" name="" value="">
+          <input class="in-t" type="text" name="" value="">
+          <input class="submit" type="submit" name="" value="submit">
+        </div>
+        <div class="fide-four">
+          <h5>Sed Imperdiet Pharetra</h5>
+          <div class="p-one">
+            <h6>Massa Nam Nulla Augue</h6>
+            <span>Friday, 6th April 2045</span>
+            <p>
+              Faucibus nec lacinia quis ornare a eros
+               pellentesque in orci vitae
+            </p>
+          </div>
+          <div class="p-two">
+            <h6>Velit Vehicula Auctor</h6>
+            <span>Thursday, 5th April 2045</span>
+            <p>
+              Pellentesque pulvinar vestibulum
+              bibendum blandit lectus pretium
+            </p>
+          </div>
+        </div>
+      </article>
+    </div>
+    <footer>
+      <div>
+        <p>Copyright © 2018 - All Rights Reserved - Domain Name</p>
+      </div>
+      <div>
+        <p>Template by OS Templates</p>
+      </div>
+      <a href="#"></a>
+    </footer>
   </body>
 </html>
+
